--- a/frontend/src/Layout.module.css
+++ b/frontend/src/Layout.module.css
@@ -1,10 +1,12 @@
 .layoutContainer {
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
 }
 
 .content {
-  padding: 4.5rem 0;
-  /* margin-bottom: 4.5rem; */
-  overflow-y: scroll;
+  height: 100vh;
+  padding-top: 4.5rem;
+  padding-bottom: 4.5rem;
+  margin: 0 auto;
+  overflow-y: auto;
 }
