--- a/frontend/src/assets/friendPage/Friend.module.css
+++ b/frontend/src/assets/friendPage/Friend.module.css
@@ -14,7 +14,7 @@
     flex-direction: column; /* 세로로 배치 */
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    /* height: 100vh; */
     width: 100vw;
 }
 
