--- a/frontend/src/assets/common/toolbar/Toolbar.module.css
+++ b/frontend/src/assets/common/toolbar/Toolbar.module.css
@@ -21,7 +21,7 @@
     align-items: center;
     justify-content: center;
     margin-left: 54%;
-    margin-top: 1%;
+    margin-top: 1rem;
 }
 
 .egg_container{
@@ -58,7 +58,8 @@
     margin-left: 5%;
 }
 
-.bell{
-    height: 3.8rem;
+.bell{    
+    margin-top: 1rem;
+    height: 3.5rem;
     width: auto;
 }
