fix: 갈리 페이지 수정

--- a/frontend/src/assets/alarmPage/Alarm.module.css
+++ b/frontend/src/assets/alarmPage/Alarm.module.css
@@ -17,3 +17,27 @@
     height: 100vh;
     width: 100vw;
 }
+
+.title_container{
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    justify-content: center;
+    margin-top: -200%;
+}
+
+.back_btn{
+    position: absolute;
+    left: 3%;
+    top: 19%;
+    height: 2.1rem;
+    width: auto;
+    transform: rotate(180deg);
+}
+
+.title_txt{
+    font-family: "bc_b";
+    font-size: 1.5rem;
+}
