--- a/frontend/src/Layout.module.css
+++ b/frontend/src/Layout.module.css
@@ -1,10 +1,10 @@
 .layoutContainer {
-  /* height: 100vh; */
+  height: 100vh;
   width: 100vw;
 }
 
 .content {
-  height: 100vh;
+  height: auto;
   padding-top: 4.5rem;
   padding-bottom: 4.5rem;
   margin: 0 auto;
