--- a/frontend/src/assets/mainPage/Main.module.css
+++ b/frontend/src/assets/mainPage/Main.module.css
@@ -14,7 +14,7 @@
     flex-direction: column; /* 세로로 배치 */
     align-items: center;
     justify-content: center;
-    height: 100%;
+    /* height: 100%; */
     width: 100vw;
 }
 
