--- a/frontend/src/assets/myPage/MyWallet.module.css
+++ b/frontend/src/assets/myPage/MyWallet.module.css
@@ -74,18 +74,25 @@
   height: 100%;
   top: 0;
   background: rgba(0, 0, 0, 0.6);
-  z-index: 100;
+  z-index: 10;
 }
 
 .mywallet_modal_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  height: 50%;
+  position: absolute;
+  width: 80dvw;
+  height: 30dvh;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: white;
-  padding: 20px; /* 내부 여백 */
-  border-radius: 5px; /* 모서리 둥글게 */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
-  z-index: 1001; /* modal_background보다 상위에 위치 */
+  border-radius: 0.8rem;
+  box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+  z-index: 20;
+}
+
+.mywallet_close {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  width: 1.5rem;
 }
