--- a/frontend/src/assets/common/navbar/Navbar.module.css
+++ b/frontend/src/assets/common/navbar/Navbar.module.css
@@ -1,11 +1,14 @@
 .nav_container{
     position: fixed;
     display: flex;
-    top: 96.5%;
+    bottom: 0;
+    margin: 0 auto;
+    /* top: 96.5%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     z-index: 4;
-    width: 100vw;
+    width: 100%;
+    max-width: 412px;
     height: 4rem;
     align-items: center;
     justify-content: center;
