--- a/frontend/src/assets/common/toolbar/Toolbar.module.css
+++ b/frontend/src/assets/common/toolbar/Toolbar.module.css
@@ -1,11 +1,11 @@
 .tool_container{
     position: fixed;
     display: flex;
-    top: 3.5%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    /* top: 3.5%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
     z-index: 5;
-    width: 100vw;
+    width: 412px;
     height: 4rem;
     align-items: center;
     justify-content: center;
