--- a/frontend/src/assets/friendPage/Friend.module.css
+++ b/frontend/src/assets/friendPage/Friend.module.css
@@ -15,7 +15,7 @@
     align-items: center;
     justify-content: center;
     /* height: 100vh; */
-    width: 100vw;
+    width: 100%;
 }
 
 .modal_background{
