--- a/frontend/src/assets/walkingPage/Walking.module.css
+++ b/frontend/src/assets/walkingPage/Walking.module.css
@@ -5,6 +5,6 @@
     flex-direction: column; 
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    width: 100vw;
+    /* height: 100vh; */
+    width: 100%;
 }
