--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 #root {
-  width: 412px;
+  width: 100%;
+  max-width: 412px;
   margin: 0 auto;
   box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
 }
