--- a/frontend/src/Layout.module.css
+++ b/frontend/src/Layout.module.css
@@ -1,12 +1,26 @@
 .layoutContainer {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.toolBar {
+  display: fixed;
+  top: 0;
+  margin: 0 auto;
+  display: flex;
+
+}
+
+.navBar {
+  display: fixed;
+  bottom: 0;
+  display: flex;
 }
 
 .content {
   width: 100%;
-  height: auto;
-  padding-top: 4.5rem;
-  padding-bottom: 4.5rem;
-  margin: 0 auto;
-  overflow-y: auto;
+  padding: 4.5rem auto;
 }
