--- a/frontend/src/assets/storePage/Store.module.css
+++ b/frontend/src/assets/storePage/Store.module.css
@@ -11,7 +11,7 @@
 .main_container {
     position: relative;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column; /* 세로로 배치 */
     align-items: center;
     height: 100%;
     width: 100%;
@@ -39,13 +39,23 @@
     margin-left: 33%;
 }
 
-.store_container{
-    width: 100%;
-    height: 50rem;
-    border: 2px solid red;
+.egg_txt{
+    font-size: 2rem;
+    color: black;
+    font-family: "bc_b";
+    border: 1px solid red;
 }
 
 .egg_container{
-    width: 20.4rem;
-    height: 4rem;
+    background: #FFF2CB;
+    width: 22.4rem;
+    height: 5rem;
+    border-radius: 1.5rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
+
