--- a/frontend/src/assets/common/navbar/Navbar.module.css
+++ b/frontend/src/assets/common/navbar/Navbar.module.css
@@ -1,11 +1,10 @@
 .nav_container{
-    /* position: fixed; */
     display: flex;
+    position: fixed;
     bottom: 0;
+    left: 0;
+    right: 0;
     margin: 0 auto;
-    /* top: 96.5%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
     z-index: 4;
     width: 100%;
     max-width: 412px;
