--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,9 +36,9 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
   min-width: 100vw;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
