--- a/frontend/src/Layout.module.css
+++ b/frontend/src/Layout.module.css
@@ -1,5 +1,4 @@
 .layoutContainer {
-  min-width: 412px;
   height: 100dvh;
   display: flex;
   flex-direction: column;
@@ -8,6 +7,7 @@
 
 .content {
   width: 100%;
+  height: 100%;
   padding: 4.5rem 0;
   overflow-y: auto;
 }
