--- a/frontend/src/assets/walkingPage/Walking.module.css
+++ b/frontend/src/assets/walkingPage/Walking.module.css
@@ -1,7 +1,7 @@
 
 .main_container {
-    display: flex;
+    /* display: flex;
     flex-direction: column; 
-    align-items: center;
+    align-items: center; */
     width: 100%;
 }
