--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,12 +38,12 @@ body {
   justify-content: center;
   min-width: 100vw;
   min-height: 100vh;
-  overflow: hidden;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  background-color: #ffffff;
 }
 
 button {
