--- a/frontend/src/assets/common/toolbar/Toolbar.module.css
+++ b/frontend/src/assets/common/toolbar/Toolbar.module.css
@@ -1,4 +1,5 @@
 .tool_container{
+    display: flex;
     position: fixed;
     top: 0;
     left: 0;
@@ -8,53 +9,51 @@
     width: 100%;
     max-width: 412px;
     margin: 0 auto;
-    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: right;
     background: white;
 }
 
-.all_money_container{
+.tool_all_money_container{
     width: 5.5rem;
     height: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left: 54%;
     margin-top: 1rem;
 }
 
-.egg_container{
+.tool_egg_container{
     width: 5.5rem;
     height: 1.5rem;
     display: flex;
     align-items: center;
 }
 
-.egg{
+.tool_egg{
     height: 1.1rem;
     width: auto;
 }
 
-.egg_txt{
+.tool_egg_txt{
     font-size: 1rem;
     margin-left: 8.5%;
 }
 
-.money_container{
+.tool_money_container{
     width: 5.5rem;
     height: 1.5rem;
     display: flex;
     align-items: center;
 }
 
-.money{
+.tool_money{
     height: 1.1rem;
     width: auto;
 }
 
-.money_txt{
+.tool_money_txt{
     font-size: 1rem;
     margin-left: 5%;
 }
@@ -63,6 +62,7 @@
     margin-top: 1rem;
     height: 3.5rem;
     width: auto;
+    margin-right: 1.5rem;
 }
 
 
@@ -86,12 +86,37 @@
     transform: translateX(-3.9rem);
     z-index: 10;
 }
+.tool_hamburger_container{
+    display: flex;
+    flex-direction: column;
+    transition: 0.01s all;
+    margin-top: 1rem;
+    margin-right: 11rem;
+}
+
+.tool_hamburger{
+    width: 2.3rem;
+    height: 0.1rem;
+    border: 2px solid black;
+    background-color: black;
+    margin: 0.2rem;
+    transition: 0.01s all;
+}
+
+.change_opacity_0{
+    transition: 0.01s all;
+    opacity: 0;
+}
+.change_opacity_1{
+    transition: 5s all;
+    opacity: 1;
+}
 
 .hamburger_container{
     display: flex;
     flex-direction: column;
     align-items: end;
-    margin: 1.3rem;
+    margin: 1.4rem;
     transition: 0.5s all;
 }
 .hamburger_container_opened{
@@ -123,7 +148,6 @@
 .profile_container{
     width: 100%;
     height: 18rem;
-    margin-top: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -178,7 +202,7 @@
 }
 
 
-/* .all_money_container{
+.all_money_container{
     width: 100%;
     height: 3rem;
     display: flex;
@@ -221,7 +245,7 @@
 .money_txt{
     font-size: 1.2rem;
     margin-left: 6.5%;
-} */
+}
 
 .bar{
     width: 100%;
