--- a/frontend/src/assets/exercisePage/SocketPage4Member.css
+++ b/frontend/src/assets/exercisePage/SocketPage4Member.css
@@ -4,6 +4,7 @@
   flex-direction: column; /* 세로로 배치 */
   align-items: center;
   justify-content: center;
+  padding-left: 1.5rem;
   padding-top: 5.5rem;
   height: 80vh;
   width: 22.5rem;
@@ -11,9 +12,9 @@
 }
 
 .chat-box {
-  justify-content: end;
+  justify-content: center;
   width: 22.5rem;
-  height: 600px;
+  height: 550px;
   border-radius: 8px;
   box-shadow: 0px 14px 24px rgba(0, 0, 0, 0.13);
   overflow: hidden;
@@ -65,8 +66,7 @@
   max-width: 80%;
 }
 
-.user-message {
-  align-self: flex-end;
+.user-message {  
   background-color: #FF5823;
   color: #fff;
   padding: 10px 15px;
@@ -75,7 +75,7 @@
 
 
 .other-message {
-  align-self: flex-start;
+  align-self: flex-end;
   background: #f0f0f0;
   color: #333;
   padding: 10px 15px;
