--- a/frontend/src/assets/memberPage/Login.module.css
+++ b/frontend/src/assets/memberPage/Login.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100dvh;
+  height: 100%;
 }
 
 .login_app_name {
