--- a/frontend/src/assets/memberPage/LoginRedirect.module.css
+++ b/frontend/src/assets/memberPage/LoginRedirect.module.css
@@ -1,20 +1,19 @@
 .login_redirect_container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
-  height: 100dvh;
+  height: 100%;
   transform: translateY(-3rem);
 }
 
 .login_loading_img {
-  width: 80dvw;
-  height: auto;
-  max-width: 32rem;
+  width: 80%;
+  max-width: 25rem;
   transform: translateX(-1.5rem);
 }
 
 .login_loading_txt {
-  font-family: "bc_b";
   font-size: xx-large;
   transform: translateY(-3rem);
 }
