--- a/frontend/src/assets/memberPage/Signup.module.css
+++ b/frontend/src/assets/memberPage/Signup.module.css
@@ -1,7 +1,7 @@
 .signup_container {
   display: flex;
   flex-direction: column;
-  width: 90dvw;
+  width: 90%;
   transition: all 0.5s ease;
   margin: 1.5rem auto;
 }
