--- a/frontend/src/assets/myPage/Mypage.module.css
+++ b/frontend/src/assets/myPage/Mypage.module.css
@@ -2,12 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
-    width: 100%;
-    padding: 2rem 0;
+    padding: 1rem 0;
 }
 
 .mypage_profile_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     margin-bottom: 1rem;
 }
@@ -25,13 +26,13 @@
     position: relative;
     width: 85%;
     background-color: #FFCB23;
-    padding: 1.5rem;
+    padding: 1.2rem;
     border: none;
     border-radius: 2rem;
     cursor: pointer;
-    margin: 1rem 0;
+    margin: 0.7rem 0;
     font-size: 1.5rem;
-    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0.1rem 0.1rem 0.5rem 0 rgba(0, 0, 0, 0.2);
 }
 
 .mypage_direct {
