--- a/frontend/src/assets/myPage/UserInfoUpdate.module.css
+++ b/frontend/src/assets/myPage/UserInfoUpdate.module.css
@@ -1,5 +1,4 @@
 .userinfoupdate_container {
-  width: 100%;
   height: 100%;
 }
 
@@ -9,20 +8,21 @@
   align-items: center;
   position: relative;
   height: 5rem;
-  width: 100dvw;
 }
 
 .userinfoupdate_back_direct {
   position: absolute;
-  left: 1rem;
+  left: 0.5rem;
   transform: rotate(180deg);
   width: 2rem;
 }
 
 .userinfoupdate_title {
   font-size: 2rem;
+  line-height: 1;
 }
 
+/* 여기부터 수정하기 */
 .userinfoupdate_sub_container {
   display: flex;
   flex-direction: column;
