--- a/frontend/src/assets/exercisePage/SocketPage4Member.css
+++ b/frontend/src/assets/exercisePage/SocketPage4Member.css
@@ -14,7 +14,7 @@
 .chat-box {
   justify-content: center;
   width: 22.5rem;
-  height: 550px;
+  height: 45rem;
   border-radius: 8px;
   box-shadow: 0px 14px 24px rgba(0, 0, 0, 0.13);
   overflow: hidden;
@@ -76,7 +76,7 @@
 
 .other-message {
   align-self: flex-end;
-  background: #f0f0f0;
+  background: #FFF2CB;
   color: #333;
   padding: 10px 15px;
   border-radius: 16px 16px 16px 0;
@@ -102,8 +102,8 @@
   padding: 10px 20px;
   border-radius: 16px;
   border: none;
-  background-color: #FF5823;
-  color: #fff;
+  background-color: #FFF2CB;
+  color: #333;
   cursor: pointer;
 }
 
