--- a/frontend/src/assets/memberPage/Login.module.css
+++ b/frontend/src/assets/memberPage/Login.module.css
@@ -8,9 +8,10 @@
 
 .login_app_name {
   font-size: 4.5rem;
+  color: #3B3934;
 }
 
 .google_login_btn {
   width: 75%;
-  margin: 2rem 0 2rem 0;
+  margin: 2rem 0;
 }
