--- a/frontend/src/assets/memberPage/Signup.module.css
+++ b/frontend/src/assets/memberPage/Signup.module.css
@@ -1,29 +1,49 @@
 .signup_container {
+  position: relative;
   display: flex;
   flex-direction: column;
-  width: 90%;
+  align-items: center;
+  width: 100%;
+  height: 100%;
   transition: all 0.5s ease;
-  margin: 1.5rem auto;
+}
+
+.signup_sub_container {
+  position: relative;
+  width: 90%;
+  margin-top: 1.5rem;
 }
 
 .signup_title {
-  display: flex;
   font-size: 1.2rem;
-  margin: 0.5rem 0;
 }
 
 .signup_input {
-  display: block;
   width: 100%;
   box-sizing: border-box;
   appearance: none;
   padding: 1rem;
-  margin: 0.5rem 0;
+  margin-top: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 0.8rem;
 }
 
+.signup_dropdown_img {
+  position: absolute;
+  width: 0.7rem;
+  right: 5%;
+  bottom: 25%;
+}
+
+.signup_search_img {
+  position: absolute;
+  width: 1.5rem;
+  right: 3%;
+  bottom: 15%;
+}
+
 .signup_btn {
+  width: 90%;
   background-color: #FFCB23;
   padding: 1rem;
   border: none;
@@ -40,13 +60,6 @@
 }
 
 .signup_error {
-  display: flex;
   font-size: 0.8rem;
   margin: 0.5rem;
-}
-
-.signup_2col {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0.5rem;
 }
