--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #3B3934;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,11 +25,11 @@
 
 a {
   font-weight: 500;
-  color: #242424;
+  color: #3B3934;
   text-decoration: inherit;
 }
 a:hover {
-  color: #242424;
+  color: #3B3934;
 }
 
 body {
@@ -47,7 +47,7 @@ h1 {
 }
 
 button {
-  color: #242424;
+  color: #3B3934;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -69,7 +69,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #242424;
+    color: #3B3934;
   }
   button {
     background-color: #f9f9f9;
