--- a/frontend/src/assets/myPage/Mypage.module.css
+++ b/frontend/src/assets/myPage/Mypage.module.css
@@ -43,3 +43,14 @@
     transform: translateY(-50%); /* 해당 요소의 크기 50%만큼 위로 이동 */
     width: 1.3rem;
 }
+
+.mypage_logout_btn {
+    margin-top: 3rem;
+    background-color: transparent;
+    border: none;
+}
+
+.mypage_logout_btn:hover {
+    text-decoration: underline;
+    text-underline-offset: 0.3rem;
+}
