--- a/frontend/src/assets/voicePage/SavedVoice.module.css
+++ b/frontend/src/assets/voicePage/SavedVoice.module.css
@@ -46,8 +46,6 @@
     height: 49.5rem;
     border-radius: 1.5rem;
     padding: 1rem;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     overflow-x: hidden;
     overflow-y: auto;
@@ -56,8 +54,7 @@
 .voice_container{
     width: 22rem;
     height: 6rem;
-    margin: 0.7rem;
-    position: relative;
+    margin: 0.7rem auto;
     border-radius: 20px;
     align-items: center;
     display: flex;
@@ -69,8 +66,7 @@
 .select_voice_container{
     width: 22rem;
     height: 6rem;
-    margin: 0.7rem;
-    position: relative;
+    margin: 0.7rem auto;
     border-radius: 20px;
     align-items: center;
     display: flex;
