--- a/frontend/src/assets/voicePage/SavedVoice.module.css
+++ b/frontend/src/assets/voicePage/SavedVoice.module.css
@@ -40,8 +40,7 @@
 }
 
 .voice_list_container{
-    background: #FFF2CB;
-    margin-top: 19.5%;
+    margin-top: 14%;
     width: 22.4rem;
     height: 49.5rem;
     border-radius: 1.5rem;
@@ -54,13 +53,14 @@
 .voice_container{
     width: 22rem;
     height: 6rem;
-    margin: 0.7rem auto;
+    margin: 1rem auto;
     border-radius: 20px;
     align-items: center;
     display: flex;
     cursor: pointer;
     background: #FFFEFC;
-    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+    position: relative;
+    box-shadow: 0.113rem 0.225rem 0.5rem 0 rgba(0, 0, 0, 0.3);
 }
 
 .select_voice_container{
@@ -71,14 +71,35 @@
     align-items: center;
     display: flex;
     cursor: pointer;
+    position: relative;
     background: #FFDC6A;
-    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0.113rem 0.225rem 0.5rem 0 rgba(0, 0, 0, 0.3);
+}
+
+.voice_date{
+    margin-left: 4%;
+    font-size: 1.2rem;
+}
+
+.voice_sendname{
+    margin-left: 4%;
+    font-size: 1.2rem;
+
+}
+
+.voice_play{
+    height: 3rem;
+    width: auto;
+    position: absolute; 
+    right: 3%;
 }
 
 .modal_background{
     width: 100%;
-    height: 100%;
-    position: absolute;
+    height: 100vh;
+    max-width: 412px;
+    max-height: 100vh;
+    position: fixed;
     background: rgba(0, 0, 0, 0.6);
     z-index: 10;
     top: 0;
@@ -87,7 +108,7 @@
 
 .voice_modal_container{
     width: 22rem;
-    height: 25rem;
+    height: 20rem;
     top: 50%;
     left: 50%;
     z-index: 11;
@@ -102,14 +123,15 @@
     position: relative;
     display: flex;
     width: 22rem;
-    height: 4rem ;
+    height: 10rem ;
+    text-align: center;
 }
 
 .voice_modal_title{
-    width: 13rem;
+    width: 18rem;
     font-family: "bc_b";
     font-size: 1.6rem;
-    top: 17%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
@@ -117,7 +139,7 @@
 
 .voice_modal_x{
     position: absolute;
-    top: 40%;
+    top: 20%;
     left: 90%;
     transform: translate(-50%, -50%);
     width: auto;
@@ -126,8 +148,8 @@
 
 .voice_content{
     width: 20rem;
-    height: 19rem;
-    top: 57.5%;
+    height: 10rem;
+    top: 69.5%;
     left: 50%;
     z-index: 11;
     position: absolute;
