--- a/frontend/src/assets/voicePage/Voice.module.css
+++ b/frontend/src/assets/voicePage/Voice.module.css
@@ -95,11 +95,11 @@
 
 .back{
     width: 100%;
+    max-width: 412px;
     height: 8rem;
-    margin-top: 203%;
     display: flex;
-    flex-direction: column;
-    position: fixed;
+    position: absolute;
+    bottom: -50px;
 }
 
 
