--- a/frontend/src/assets/myPage/MyGoalUpdate.module.css
+++ b/frontend/src/assets/myPage/MyGoalUpdate.module.css
@@ -1,5 +1,6 @@
 .mygoalupdate_container {
   height: 100%;
+  overflow-y: auto;
 }
 
 .mygoalupdate_top_bar {
@@ -7,17 +8,29 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  height: 5rem;
+  width: 100%;
+  height: 4rem;
 }
 
 .mygoalupdate_back_direct {
   position: absolute;
   left: 0.5rem;
   transform: rotate(180deg);
-  width: 2rem;
+  width: 1.5rem;
 }
 
 .mygoalupdate_title {
-  font-size: 2rem;
+  font-size: 1.7rem;
   line-height: 1;
 }
+
+.mygoalupdate_sub_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  border: 2px solid green;
+}
+
