--- a/frontend/src/assets/myPage/UserInfoUpdate.module.css
+++ b/frontend/src/assets/myPage/UserInfoUpdate.module.css
@@ -35,22 +35,41 @@
 
 .userinfoupdate_profile_container {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.userinfoupdate_img_container {
+  position: relative;
   width: 40%;
-  margin: 0 auto;
+  overflow: hidden;
+  border-radius: 50%;
+  box-shadow: 0 0.1rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.userinfoupdate_img_container::before {
+  content: '';
+  display: block;
+  padding-top: 100%;
 }
 
 .userinfoupdate_profile_img {
+  position: absolute;
+  top: 0;
+  left: 0;
   border-radius: 50%;
   width: 100%;
-  box-shadow: 0 0.1rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+  height: 100%;
 }
 
 .userinfoupdate_camera_img {
   position: absolute;
   border-radius: 50%;
-  width: 25%;
+  width: 10%;
   bottom: 8%;
-  right: 0;
+  right: 30%;
   box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
 }
 
