--- a/frontend/src/assets/myPage/MyWallet.module.css
+++ b/frontend/src/assets/myPage/MyWallet.module.css
@@ -1,6 +1,6 @@
 .mywallet_container {
-  position: relative;
   height: 100%;
+  overflow-y: auto;
   border: 2px solid red;
 }
 
@@ -9,29 +9,39 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  height: 5rem;
+  width: 100%;
+  height: 4rem;
 }
 
 .mywallet_back_direct {
   position: absolute;
   left: 0.5rem;
   transform: rotate(180deg);
-  width: 2rem;
+  width: 1.5rem;
 }
 
 .mywallet_title {
-  font-size: 2rem;
+  font-size: 1.7rem;
   line-height: 1;
 }
 
-/* 여기부터 수정하기 */
 .mywallet_sub_container {
-  margin: 1rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border: 2px solid blue;
+}
+
+.mywallet_field_container {
+  width: 90%;
+  margin-top: 1.5rem;
+  border: 2px solid green;
 }
 
 .mywallet_sub_title {
-  display: flex;
-  font-size: 1.7rem;
+  font-size: 1.2rem;
 }
 
 .mywallet_2col {
