--- a/frontend/src/assets/walkingPage/Walking.module.css
+++ b/frontend/src/assets/walkingPage/Walking.module.css
@@ -1,7 +1,9 @@
-
-.main_container {
-    /* display: flex;
-    flex-direction: column; 
-    align-items: center; */
-    width: 100%;
+.walking_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem 0;
+    height: 100%;
+    overflow-y: auto;
+    border: 2px solid red;
 }
