--- a/frontend/src/assets/friendPage/Friend.module.css
+++ b/frontend/src/assets/friendPage/Friend.module.css
@@ -22,6 +22,7 @@
     top: 0;
     width: 100%;
     height: 100%;
+    max-width: 412px;
     position: absolute;
     background: rgba(0, 0, 0, 0.6);
     z-index: 10;
