--- a/frontend/src/assets/voicePage/SendingVoice.module.css
+++ b/frontend/src/assets/voicePage/SendingVoice.module.css
@@ -178,6 +178,7 @@ font-face {
     bottom: 0;
     width: 100%;
     height: 100%;
+    max-width: 412px;
     position: absolute;
     background: rgba(0, 0, 0, 0.6);
     z-index: 10;
