--- a/frontend/src/assets/voicePage/SendVoice.module.css
+++ b/frontend/src/assets/voicePage/SendVoice.module.css
@@ -19,25 +19,24 @@
 }
 
 .title_container{
-    width: 100%;
-    height: auto;
     display: flex;
+    justify-content: center;
     align-items: center;
-    position: fixed;
-    background-color: white;
+    position: relative;
+    width: 100%;
+    height: 4rem;
 }
 
 .back_btn{
-    height: 2.1rem;
-    margin-left: 3%;
-    width: auto;
+    position: absolute;
+    left: 0.5rem;
     transform: rotate(180deg);
+    width: 1.5rem;
 }
 
 .title_txt{
     font-family: "bc_b";
     font-size: 1.5rem;
-    margin-left: 17.5%;
 }
 
 .voice_btn_container{
@@ -119,6 +118,7 @@
     background: rgba(0, 0, 0, 0.6);
     z-index: 10;
     overflow: hidden;
+    max-width: 412px;
 
 }
 
