--- a/frontend/src/assets/voicePage/Voice.module.css
+++ b/frontend/src/assets/voicePage/Voice.module.css
@@ -19,27 +19,25 @@
 }
 
 .title_container{
-    width: 100%;
-    height: auto;
     display: flex;
+    justify-content: center;
     align-items: center;
-    position: fixed;
-    background-color: white;
+    position: relative;
+    width: 100%;
+    height: 4rem;
 }
 
 .back_btn{
-    height: 2.1rem;
-    margin-left: 3%;
-    width: auto;
+    position: absolute;
+    left: 0.5rem;
     transform: rotate(180deg);
+    width: 1.5rem;
 }
 
 .title_txt{
     font-family: "bc_b";
     font-size: 1.5rem;
-    margin-left: 25%;
 }
-
 .voice_btn_container{
     width: 100%;
     height: 100%;
