--- a/frontend/src/assets/common/toolbar/Toolbar.module.css
+++ b/frontend/src/assets/common/toolbar/Toolbar.module.css
@@ -183,27 +183,18 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 15%;
+    margin-top: 20%;
 }
 
 .profile_name{
     font-size: 1.25rem;
     font-family: "bc_b";
-    margin-top: -15%;
-    position: fixed;
+    margin-bottom: 0;
 }
 
 .profile_intro{
-    width: 11rem;
     height: 5rem;
     font-size: 1rem;
-    margin-top: 30%;
-    top: 50;
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: left;
     font-family: "bc_l";
     margin-left: 0.8rem;
 }
