feat: 친구가 없을 때 이미지를 출력하도록 수정

--- a/frontend/src/assets/friendPage/Friend.module.css
+++ b/frontend/src/assets/friendPage/Friend.module.css
@@ -510,3 +510,28 @@
     font-size: 1.2rem;
 }
 
+.find_friend_default_container{
+    text-align: center;
+    width: 100%;
+}
+
+.find_friend_default_container h2{
+    margin-bottom: 0;
+}
+.find_friend_default_container img{
+    width: 7rem;
+    margin-top: -1rem;
+}
+
+.list_default{
+    text-align: center;
+    padding: 1rem;
+}
+
+.list_default h2{
+    margin-bottom: 0;
+}
+
+.list_default img{
+    width: 15rem;
+}
