--- a/frontend/src/assets/halligalliPage/HalliGalli.module.css
+++ b/frontend/src/assets/halligalliPage/HalliGalli.module.css
@@ -104,22 +104,19 @@
 }
 
 .title_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
     width: 100%;
     height: 4rem;
-    display: flex;
-    align-items: center;
-    position: fixed;
-    background: white;
-    justify-content: center;
 }
 
 .back_btn{
     position: absolute;
-    left: 3%;
-    top: 19%;
-    height: 2.1rem;
-    width: auto;
+    left: 0.5rem;
     transform: rotate(180deg);
+    width: 1.5rem;
 }
 
 .title_txt{
